crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_2_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..59
├─Policy 0..46
│ ├─PermitKeyword "permit" 0..6
│ ├─Whitespace " " 6..7
│ ├─OpenParenthesis "(" 7..8
│ ├─VariableDefinition 8..17
│ │ └─PrincipalKeyword "principal" 8..17
│ ├─Comma "," 17..18
│ ├─Whitespace " " 18..19
│ ├─VariableDefinition 19..25
│ │ └─ActionKeyword "action" 19..25
│ ├─Comma "," 25..26
│ ├─Whitespace " " 26..27
│ ├─VariableDefinition 27..46
│ │ ├─ResourceKeyword "resource" 27..35
│ │ ├─Whitespace " " 35..36
│ │ ├─Equal "==" 36..38
│ │ ├─Whitespace " " 38..39
│ │ └─Name 39..46
│ │   ├─Identifier "Photo" 39..44
│ │   └─PathSeparator "::" 44..46
│ ├─CloseParenthesis "" 46..46
│ └─Semicolon "" 46..46
└─Policy 46..59
  ├─Error 46..59
  │ ├─Unknown "'" 46..47
  │ ├─Identifier "mine" 47..51
  │ ├─Dot "." 51..52
  │ ├─Identifier "jpg" 52..55
  │ ├─Unknown "'" 55..56
  │ ├─CloseParenthesis ")" 56..57
  │ ├─Semicolon ";" 57..58
  │ └─Newline "\n" 58..59
  └─Semicolon "" 59..59
