crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_3.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ test:1:5
  │
1 │ @id('0')
  ╰╴    ━ expected `)`
error: missing policy effect
  ╭▸ test:1:1
  │
1 │ @id('0')
  ╰╴━━━━ expected `permit` or `forbid`
error: unexpected token
  ╭▸ test:1:5
  │
1 │   @id('0')
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━┛ unexpected token
