crates/lowerer/tests/snapshots/upstream_parser_policy__single_quote_string_3_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ single_quote_string_3:1:5
  │
1 │ @id('0')
  ╰╴    ━ expected `)`
error: expected `;`
  ╭▸ single_quote_string_3:1:5
  │
1 │ @id('0')
  ╰╴    ━ expected `;`
error: unexpected token
  ╭▸ single_quote_string_3:1:5
  │
1 │   @id('0')
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━┛ unexpected token
error: expected a string literal
  ╭▸ single_quote_string_3:1:5
  │
1 │ @id('0')
  ╰╴    ━ expected a string literal
error: missing policy effect
  ╭▸ single_quote_string_3:1:1
  │
1 │ @id('0')
  ╰╴━━━━ expected `permit` or `forbid`
