crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_1_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ unclosed_strings_1:3:21
  │
3 │       principal.foo = "bar
  │ ┏━━━━━━━━━━━━━━━━━━━━━┛
4 │ ┃ };
  ╰╴┗━━━┛ unexpected token
error: expected `}`
  ╭▸ unclosed_strings_1:4:4
  │
4 │ };
  ╰╴  ━ expected `}`
error: expected `;`
  ╭▸ unclosed_strings_1:4:4
  │
4 │ };
  ╰╴  ━ expected `;`
error: expected `}`
  ╭▸ unclosed_strings_1:3:5
  │
3 │     principal.foo = "bar
  ╰╴    ━━━━━━━━━ expected `}`
error: invalid operator `=`
  ╭▸ unclosed_strings_1:3:19
  │
3 │     principal.foo = "bar
  │                   ━ not a valid operator
  ╰╴
help: use `==` for equality
  ╭╴
3 │     principal.foo == "bar
  ╰╴                   +
