crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_1_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..72
└─Policy 0..72
  ├─PermitKeyword "permit" 0..6
  ├─Whitespace " " 6..7
  ├─OpenParenthesis "(" 7..8
  ├─VariableDefinition 8..17
  │ └─PrincipalKeyword "principal" 8..17
  ├─Comma "," 17..18
  ├─Whitespace " " 18..19
  ├─VariableDefinition 19..25
  │ └─ActionKeyword "action" 19..25
  ├─Comma "," 25..26
  ├─Whitespace " " 26..27
  ├─VariableDefinition 27..35
  │ └─ResourceKeyword "resource" 27..35
  ├─CloseParenthesis ")" 35..36
  ├─Whitespace "\n" 36..37
  └─Condition 37..72
    ├─WhenKeyword "when" 37..41
    ├─Whitespace " " 41..42
    ├─OpenBrace "{" 42..43
    ├─Whitespace "\n    " 43..48
    └─RelationExpression 48..72
      ├─MemberExpression 48..62
      │ ├─Name 48..57
      │ │ └─PrincipalKeyword "principal" 48..57
      │ └─Field 57..62
      │   ├─Dot "." 57..58
      │   ├─Identifier "foo" 58..61
      │   └─Whitespace " " 61..62
      ├─Assign "=" 62..63
      ├─Whitespace " " 63..64
      └─Error 64..72
        └─Error "\"bar\n};\n" 64..72
