crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_2_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unterminated string literal
  ╭▸ unclosed_strings_2:1:47
  │
1 │ permit (principal, action, resource == Photo::"mine.jpg);
  ╰╴                                              ━━━━━━━━━━━ missing closing `"`
error: expected `;`
  ╭▸ unclosed_strings_2:1:59
  │
1 │ permit (principal, action, resource == Photo::"mine.jpg);
  ╰╴                                                         ━
error: expected `)`
  ╭▸ unclosed_strings_2:1:9
  │
1 │ permit (principal, action, resource == Photo::"mine.jpg);
  ╰╴        ━━━━━━━━━
error: missing expression
  ╭▸ unclosed_strings_2:1:40
  │
1 │ permit (principal, action, resource == Photo::"mine.jpg);
  ╰╴                                       ━━━━━━━ expected an entity reference or slot
